# rustig

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
hook/: Cargo.toml  build.rs
hook/src/: main.rs
migrations/: 20221015221015_initial.sql
proto/: hook.proto
src/: base.rs  cli.rs  data.rs  error.rs  main.rs
tests/: cli.rs
tests/cmd/: basic_usage.trycmd
