[package]
name = "rustig"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.12", features = ["derive"] }
clap-verbosity-flag = "1.0.0"
sha-1 = "0.10.0"
log = "0.4.17"
env_logger = "0.9.0"
strum = "0.24.0"
strum_macros = "0.24.0"
anyhow = "1.0.57"

[dev-dependencies]
assert_cmd = "2.0.4"
assert_fs = "1.0.7"
predicates = "2.1.1"
trycmd = "0.13.4"
