[package]
name = "rustig"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.15", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
sha-1 = "0.10.0"
log = "0.4.17"
env_logger = "0.9.0"
strum = "0.24.0"
strum_macros = "0.24.0"
anyhow = "1.0.57"
tokio = { version = "1.21.2", features = ["macros"] }
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-rustls", "json"] }
async-recursion = "1.0.0"
serde_json = "1.0.87"
serde = "1.0.147"
serde_with = { version = "2.0.1", features = ["base64"] }

[dev-dependencies]
assert_cmd = "2.0.4"
assert_fs = "1.0.7"
predicates = "2.1.1"
trycmd = "0.14.0"
